2019-08-10: add desc,delete by query support