@@ -7,6 +7,7 @@ import io.github.iamazy.elasticsearch.dsl.sql.parser.ExpressionQueryParser;
 import org.apache.lucene.search.join.ScoreMode;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.NestedQueryBuilder;
+import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 
 /**
@@ -24,9 +25,9 @@ public class NestedQueryParser implements ExpressionQueryParser<ElasticsearchPar
         if(boolExpressionParser==null){
             boolExpressionParser=new BoolExpressionParser();
         }
-        BoolQueryBuilder boolQueryBuilder = boolExpressionParser.parseBoolQueryExpr(expression.nestedClause().query);
-        NestedQueryBuilder queryBuilder= QueryBuilders.nestedQuery(nestedPath,boolQueryBuilder, ScoreMode.Avg);
-        return new AtomicQuery(queryBuilder);
+        QueryBuilder queryBuilder = boolExpressionParser.parseBoolQueryExpr(expression.nestedClause().query);
+        NestedQueryBuilder nestedQueryBuilder= QueryBuilders.nestedQuery(nestedPath,queryBuilder, ScoreMode.Avg);
+        return new AtomicQuery(nestedQueryBuilder);
     }
 
     @Override
