@@ -1,1 +1,2 @@
 2019-08-10: add desc,delete by query support
+2019-08-14: add function score support
